--- a/package.json
+++ b/package.json
@@ -18,9 +18,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "date-fns": "^2.9.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "http-status-codes": "^1.4.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.22",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.6",
     "nodemon": "^2.0.2",
