--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node dist/main.js",
+    "dev": "nodemon src/main.ts",
     "build": "tsc -p ."
   },
   "@comment scripts": {
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -31,8 +32,10 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^13.1.6",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.1",
